# rust-host-template

./: .gitignore  Cargo.toml  cargo-generate.toml  dump.sh  dump_config.toml
api_client/: Cargo.toml
api_client/src/: core.rs  lib.rs
api_client/src/interfaces/: mod.rs  wasm.rs
api_server/: Cargo.toml
api_server/src/: main.rs  never_error.rs  run_http_host.rs  setup_tracing.rs  test_helper.rs
api_server/src/layers/: access_log.rs
api_server/src/modules/: dev_api.rs  mod.rs
api_server/src/states/: mod.rs  mysql_state.rs  redis_state.rs
api_server/src/states/operations/: distribution_lock.rs  mod.rs
dev_env/: compose.yaml  connect_db.sh  start_host.sh
shared_model/: Cargo.toml
shared_model/src/: auth_api.rs  data_payload.rs  lib.rs
src/: db_enum.rs  main.rs
src/api/: state.rs
src/scaffold/: access_log.rs  cache_init.rs  database_init.rs  mod.rs  pretty.rs  quit_sig.rs  remote_addr.rs  rest.rs  tracing_output.rs
